k8s-alternativo/nifi/nifi.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nifi
  labels:
    name: nifi
    app: nifi
  
spec:
  selector:
    matchLabels:
      app: nifi
  template:
    metadata:
      labels:
        app: nifi
    
    spec:
      setHostnameAsFQDN: true
      # dnsPolicy: ClusterFirstWithHostNet
      restartPolicy: Always
      
      containers:
      - name: nifi
        image: docker.io/apache/nifi:1.25.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
        - containerPort: 11443
          name: cluster
        - containerPort: 8443
          name: https
        - containerPort: 6342
          name: cluster-lb
        volumeMounts:
          - name: data
            mountPath: /opt/nifi/nifi-current/data
            subPath: data
            readOnly: false
          - name: data
            mountPath: /opt/nifi/nifi-current/keytool
            subPath: keytool
            readOnly: false
        resources:
          requests:
            cpu: 400m
            memory: 2Gi
          limits:
            cpu: 400m
            memory: 2Gi
        
      volumes:
        - name: data
          emptyDir:
            sizeLimit: 3Gi
