k8s-alternativo/nifi/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nifi
  labels:
    app: nifi

spec:
  type: ClusterIP
  selector:
    app: nifi
  ports:
  - protocol: TCP
    port: 6342
    targetPort: 6342
    name: cluster-lb
  - protocol: TCP
    port: 8080
    targetPort: 8080
    name: http
  - protocol: TCP
    port: 8443
    targetPort: 8443
    name: https
  - protocol: TCP
    port: 11443
    targetPort: 11443
    name: cluster
